Modified x and y plotting

--- a/templates/form.html
+++ b/templates/form.html
@@ -107,8 +107,8 @@
                         };
 
                         var data = [{
-                            x: barChartData.labels,
-                            y: barChartData.values,
+                            x: barChartData.values,
+                            y: barChartData.labels,
                             type: 'bar',
                             orientation: 'h',
                             marker: { color: ['#ff6666', '#f2c91f', '#66ff66'] }
